EDU-505 chore: apply spotless formatting